k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: todo-app
spec:
  selector:
    matchLabels:
      app: todo-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: rajeshtanguturi/todo-frontend:0.1
          ports:
            - containerPort: 80
